<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_name_label" />

            <EditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_location_label" />


            <EditText
                android:id="@+id/event_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_location_hint" />


            <TextView
                android:id="@+id/event_date"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_date_hint" />

            <Button
                android:id="@+id/event_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_date_hint" />

            <TextView
                android:id="@+id/event_time"
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_time_hint" />

            <Button
                android:id="@+id/event_time_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_time_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_description_hint" />

            <EditText
                android:id="@+id/event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_description_hint" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_organizer_hint" />

            <EditText
                android:id="@+id/event_organizer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_organizer_hint" />


            <ImageView
                android:id="@+id/image_create"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_user_profile"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />

            <Button
                android:id="@+id/image_chooser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload_image" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_event"
        android:text="@string/create"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>